# blaze-lang

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  LANGUAGE_SPECIFICATIONS.md  LICENSE.md  README.md  ROADMAP.md  main.c
bench/: README.md  arithmetic_loop.blaze  arithmetic_loop.py  hashmap_set_workload.blaze  hashmap_set_workload.py  hashmap_string_and_class_keys.blaze  hashmap_string_and_class_keys.py  run_benchmarks.py  string_join_workload.blaze  string_join_workload.py
examples/: collections_order_analytics.blaze  comprehensive_test.blaze  fibonacci_no_tco.blaze  fibonacci_tco.blaze  io_greeting.blaze  write_file.blaze
plans/: generics_design.md
src/: README.md  ast.c  ast.h  chunk.c  chunk.h  colors.c  colors.h  common.h  compiler.c  compiler.h  debug.c  debug.h  generic.c  generic.h  memory.c  memory.h  module.c  module.h  object.c  object.h  parser.c  parser.h  scanner.c  scanner.h  typechecker.c  typechecker.h  types.c  types.h  value.c  value.h  vm.c  vm.h
src/base/: chunk.c  chunk.h  common.h  memory.h
src/codegen/: compiler.c  compiler.h  compiler_emit.inc  compiler_expr.inc  compiler_internal.h  compiler_stmt.inc
src/module/: module.c
src/runtime/: debug.c  object.c  object.h  vm.c  vm.h  vm_call.c  vm_core.c  vm_debugger.c  vm_execute.c  vm_internal.h  vm_natives.c
src/semantics/: generic.c  generic.h  typechecker.c  typechecker.h  typechecker_err_symbols.inc  typechecker_expr.inc  typechecker_internal.h  typechecker_narrow.inc  typechecker_resolve.inc  typechecker_stmt.inc  types.c  types.h
src/support/: colors.h
src/syntax/: ast.c  ast.h  parser.c  parser.h  parser_expr.inc  parser_infra.inc  parser_internal.h  parser_stmt.inc  parser_type.inc  scanner.c  scanner.h
std/: array.blaze  ascii.blaze  collections.blaze  date.blaze  debug.blaze  io.blaze  math.blaze  path.blaze  prelude.blaze  random.blaze  string.blaze  time.blaze
tests/: arithmetic_test.blaze  bitwise_ops.blaze  bitwise_ops_lshift.blaze  bitwise_ops_not.blaze  bitwise_ops_or.blaze  bitwise_ops_paren_shift_alt_parse.blaze  bitwise_ops_prec_shift.blaze  bitwise_ops_shift_from_add_const_left_var_right.blaze  bitwise_ops_shift_group_to_var.blaze  bitwise_ops_shift_grouped_zero_shift.blaze  bitwise_ops_shift_left_from_add_const_via_let.blaze  bitwise_ops_shift_left_from_add_expr_runtime_shift1.blaze  bitwise_ops_shift_left_from_mul_const.blaze  bitwise_ops_xor.blaze  bool_print_test.blaze  debug_arithmetic.blaze  destructure_debug.blaze  destructuring_comprehensive.blaze  destructuring_test.blaze  enum_match_none_only.blaze  enum_none_debug.blaze  generic_class_minimal.blaze  generic_minimal.blaze  generic_test.blaze  loop_unroll.blaze  manual_index.blaze  nan_boxing.blaze  nan_boxing_simple.blaze  nan_test_simple.blaze  object_destructuring_test.blaze  optional_simple.blaze  optional_types.blaze  paren_literal_print.blaze  phase7_extends_min.blaze  phase7_features.blaze  phase7_interfaces.blaze  rest_params_verify.blaze  tail_call.blaze  tail_call_direct_args.blaze  tail_call_exact_copy.blaze  (+5 more)
tests/bitwise/: bitwise_ops_and_grouped_literals_no_fold.blaze  bitwise_ops_edge_cases.blaze  bitwise_ops_expr_y_amp_shift.blaze  bitwise_ops_min_and.blaze  bitwise_ops_paren_and_only.blaze  bitwise_ops_prec_add_shift_right_fenced.blaze  bitwise_ops_rshift.blaze  bitwise_ops_shift_const_left_no_paren.blaze  bitwise_ops_shift_group_in_let.blaze  bitwise_ops_shift_grouped_literals_no_fold.blaze  bitwise_ops_shift_left_from_add_const_small_shift.blaze  bitwise_ops_shift_left_from_add_const_via_var.blaze  bitwise_ops_shift_left_from_add_expr_runtime.blaze  bitwise_ops_shift_left_from_expr.blaze  bitwise_ops_shift_nonliteral_left.blaze  bitwise_ops_shift_paren.blaze  bitwise_ops_shift_var_left.blaze
tests/class/: class_basic_method.blaze  interfaces.blaze  (+5 more)
tools/: split_sources.py
(+41 files in other folders)
